--- a/latex/pn_formation.tex
+++ b/latex/pn_formation.tex
@@ -120,9 +120,11 @@
 }
 
 
+
 %%%%%%%%%%%%%%%%
 %% SEMESTRE 1 %%
 %%%%%%%%%%%%%%%%
+\arrayrulecolor{black}
 \section{Semestre 1}
 \def\sem{A}
 
@@ -153,6 +155,7 @@
 %%%%%%%%%%%%%%%%
 %% SEMESTRE 2 %%
 %%%%%%%%%%%%%%%%
+\arrayrulecolor{black}
 \section{Semestre 2}
 \def\sem{B} % Le semestre 2
 
