--- a/latex/styles.tex
+++ b/latex/styles.tex
@@ -16,9 +16,9 @@
 %\definecolor{compSB}{HTML}{6612D0}
 
 % Les couleurs de texte
-\definecolor{compCAp}{HTML}{000000}
-\definecolor{compCBp}{HTML}{000000}
-\definecolor{compCCp}{HTML}{000000}
+\definecolor{compCAp}{HTML}{202020}
+\definecolor{compCBp}{HTML}{202020}
+\definecolor{compCCp}{HTML}{202020}
 \definecolor{compSAp}{HTML}{000000}
 %\definecolor{compSAp}{HTML}{FFFFFF}
 \definecolor{compSBp}{HTML}{FFFFFF}
@@ -40,6 +40,10 @@
 \def\niveaupathB{75}
 \def\niveaupathC{100}
 
+% Les SAE
+\definecolor{saeC}{HTML}{811453}
+\definecolor{exempleC}{HTML}{682145}
+\definecolor{ressourceC}{HTML}{483D8B}
 
 % Espacement titres section de la table des matières
 \makeatletter
