--- a/latex/synthese/S1_acs_vs_saes_ressources.tex
+++ b/latex/synthese/S1_acs_vs_saes_ressources.tex
@@ -1,3 +1,4 @@
+\arrayrulecolor{black}
 \begin{tabular}[c]{|lp{3.5cm}||c|c|c|c|c|c||c|c|c|c|c|c|c|c|c|c|c|c|c|c|c|}
 \hline 
  & & \multicolumn{6}{c||}{\bfseries SAÉs}
