--- a/latex/ressources/R201.tex
+++ b/latex/ressources/R201.tex
@@ -69,4 +69,4 @@ pourront servir de support)}
 }
 
 % Mots-clés
-\ajoutRmotscles{Plan d'adressage, routage état de lien, stratégies de filtrage, , CIDR, VLSM, agrégation de routes, IPv6, NDP}
+\ajoutRmotscles{Plan d'adressage, Routage état de lien, Stratégies de filtrage, CIDR, VLSM, Agrégation de routes, IPv6, NDP}
