--- a/latex/ressources/R203.tex
+++ b/latex/ressources/R203.tex
@@ -54,23 +54,25 @@ pourront servir de support).}
 \vspace{-5pt}
 \begin{itemize}
 \item
-  Rappels sur les protocoles de transport (TCP, UDP)
+  Rappels sur les protocoles de transport (TCP, UDP).
 \item
-  Utilisation de ssh pour l'accès distant
+  Utilisation de ssh pour l'accès distant.
 \item
   Principe, installation, configuration et tests des services :
-\item
-  DHCP
-\item
-  DNS (fonctions de base)
-\item
-  HTTP
-\item
-  TFTP, FTP
-\item
-  NTP
+  \begin{itemize}
+  \item
+    DHCP;
+  \item
+    DNS (fonctions de base);
+  \item
+    HTTP;
+  \item
+    TFTP, FTP;
+  \item
+    NTP.
+  \end{itemize}
 \end{itemize}
 }
 
 % Mots-clés
-\ajoutRmotscles{Protocoles et ports applicatifs, services, systèmes d'exploitation}
+\ajoutRmotscles{Protocoles et ports applicatifs, Services, Systèmes d'exploitation}
