--- a/latex/ressources/R207.tex
+++ b/latex/ressources/R207.tex
@@ -39,17 +39,16 @@
 
 % Le descriptif
 \ajoutRancrage{Le professionnel R\&T traite un grand nombre de données. Ces données
-(par exemple : l'annuaire des utilisateurs du réseau ou l'état des
-équipements informatiques) peuvent servir à la configuration et à
-l'administration des services réseau d'une entreprise (compétence
-RT1-Administrer) ou à alimenter les pages d'un site Web (compétence
-RT3-Programmer). Il est donc amené à stocker, organiser, gérer, protéger
+(par ex: l'annuaire des utilisateurs du réseau ou l'état des équipements
+informatiques) peuvent servir à la configuration et à l'administration
+des services réseau d'une entreprise (RT1) ou à alimenter les pages d'un
+site Web (RT3). Il est donc amené à stocker, organiser, gérer, protéger
 des données provenant de différentes sources (thématiques intégrant le
-PIX, cf.~https://pix.fr/competences), mais aussi à les traiter en
+PIX, cf.~\url{https://pix.fr/competences}), mais aussi à les traiter en
 développant différents outils informatiques pour ses besoins personnels
-ou pour son équipe (compétence RT3-Programmer). Plus largement, il
-contribue activement à l'exploitation et à la maintenance du système
-d'information de l' entreprise.\\
+ou pour son équipe (RT3). Plus largement, il contribue activement à
+l'exploitation et à la maintenance du système d'information de l'
+entreprise.\\
 Cette ressource introduit les éléments fondamentaux des systèmes de
 gestion de base de données en contribuant à la validation des
 apprentissages critiques mentionnés précédemment. Elle présente
@@ -78,15 +77,13 @@ introduits.}
   Base de données relationnelles :
   \begin{itemize}
   \item
-    Schéma relationnel d'une base de données
+    Schéma relationnel d'une base de données;
   \item
-    Sensibilisation aux contraintes d'intégrité
+    Sensibilisation aux contraintes d'intégrité;
   \item
-    Création de tables simples
+    Création de tables simples;
   \item
-    Interrogation de données
-  \item
-    Ajout et modification de données
+    Interrogation de données, ajout et modification de données.
   \end{itemize}
 \item
   Lecture d'une documentation technique (UML, diagramme de classes)
