--- a/latex/ressources/R208.tex
+++ b/latex/ressources/R208.tex
@@ -33,19 +33,18 @@
 \ajoutRsae{SAÉ24}{Projet intégratif}
 
 % Les pre-requis
-\ajoutRprerequis{R010}{None}
+\ajoutRprerequis{R107}{Fondamentaux de la programmation}
 
 % Le descriptif
 \ajoutRancrage{Le professionnel R\&T est amené à développer différents outils
-informatiques à usage personnel ou interne à l'équipe (compétence
-RT3-Programmer). Ces outils peuvent traiter des données complexes, viser
-des fonctionnalités multiples et être développé en équipe : il est alors
-nécessaire - pour le professionnel R\&T - de structurer son travail,
-tant sur les variables manipulant les données, les fichiers qui les
-sauvegardent ou les restaurent, que sur l'organisation (arborescence) de
-son projet. La ressource introduit ses éléments structurels en
-contribuant à l'acquisition des apprentissages critiques mentionnés
-précédemment.}
+informatiques à usage personnel ou interne à l'équipe (RT3). Ces outils
+peuvent traiter des données complexes, viser des fonctionnalités
+multiples et être développé en équipe : il est alors nécessaire - pour
+le professionnel R\&T - de structurer son travail, tant sur les
+variables manipulant les données, les fichiers qui les sauvegardent ou
+les restaurent, que sur l'organisation (arborescence) de son projet. La
+ressource introduit ses éléments structurels en contribuant à
+l'acquisition des apprentissages critiques mentionnés précédemment.}
 
 % Contenus
 \ajoutRcontenudetaille{
@@ -60,23 +59,23 @@ précédemment.}
   Structure complexe de données :
   \begin{itemize}
   \item
-    listes 2D, tableaux associatifs/dictionnaires
+    listes 2D, tableaux associatifs/dictionnaires;
   \item
-    notion de classes (instance, attributs, méthodes)
+    notion de classes (instance, attributs, méthodes).
   \end{itemize}
 \item
   Manipulation de fichiers avancée :
   \begin{itemize}
   \item
-    fichiers structurés (XML, CSV, JSON, YAML)
+    fichiers structurés (XML, CSV, JSON, YAML);
   \item
-    gestion de l'arborescence par le code
+    gestion de l'arborescence par le code;
   \item
-    lecture/écriture de fichiers structurés
+    lecture/écriture de fichiers structurés;
   \item
-    notion de sérialisation
+    notion de sérialisation;
   \item
-    notion de persistance des données
+    notion de persistance des données.
   \end{itemize}
 \item
   Initiation aux expressions régulières
