--- a/latex/synthese/S1_coeffs_saes_ressources.tex
+++ b/latex/synthese/S1_coeffs_saes_ressources.tex
@@ -1,93 +1,92 @@
-\arrayrulecolor{black}
 \begin{tabular}[c]{|rcp{6cm}||c|c||c||c|c|c|}
 \hline 
  & & & \multicolumn{3}{c||}{\bfseries Volumes} 
  & \multicolumn{3}{c|}{\bfseries Coefficients} 
  \\ \hline 
  & & & \rotatebox[origin=l]{90}{\bfseries Heures de formation encadrée} & \rotatebox[origin=l]{90}{\bfseries Heures de TPs} & \rotatebox[origin=l]{90}{\bfseries Heures de projets} & \rotatebox[origin=l]{90}{\begin{tabular}{p{5cm}}
-\bfseries RT1 - Administrer les réseaux et l'Internet\\ 
+\textcolor{compCA}{\bfseries RT1} - Administrer les réseaux et l'Internet\\ 
  \small Niveau 1 - Assister l'administrateur du réseau
 \end{tabular}
 }
  & \rotatebox[origin=l]{90}{\begin{tabular}{p{5cm}}
-\bfseries RT2 - Connecter les entreprises et les usagers\\ 
+\textcolor{compCB}{\bfseries RT2} - Connecter les entreprises et les usagers\\ 
  \small Niveau 1 - Découvrir les transmissions et la ToIP
 \end{tabular}
 }
  & \rotatebox[origin=l]{90}{\begin{tabular}{p{5cm}}
-\bfseries RT3 - Créer des outils et applications informatiques pour les R\&T\\ 
+\textcolor{compCC}{\bfseries RT3} - Créer des outils et applications informatiques pour les R\&T\\ 
  \small Niveau 1 - S'intégrer dans un service informatique
 \end{tabular}
 }
 
 \\ 
-\hline\hline\multicolumn{6}{|l}{\bfseries SAÉs}
+\hline\hline\multicolumn{6}{|l}{\textcolor{saeC}{\bfseries SAÉs}}
 \\ 
-\hline SAÉ11& | & 
+\hline \textcolor{saeC}{SAÉ11} & | & 
 \begin{tabular}{p{5.7cm}} \tiny{Se sensibiliser à l'hygiène informatique et à la cybersécurité} \end{tabular} & 
 2h & 5h & 12h & 16 &  & \\ 
-\hline SAÉ12& | & 
+\hline \textcolor{saeC}{SAÉ12} & | & 
 \begin{tabular}{p{5.7cm}} \tiny{S'initier aux réseaux informatiques} \end{tabular} & 
 3h & 7h & 20h & 32 &  & \\ 
-\hline SAÉ13& | & 
+\hline \textcolor{saeC}{SAÉ13} & | & 
 \begin{tabular}{p{5.7cm}} \tiny{Découvrir un dispositif de transmission} \end{tabular} & 
 2h & 5h & 16h &  & 33 & \\ 
-\hline SAÉ14& | & 
+\hline \textcolor{saeC}{SAÉ14} & | & 
 \begin{tabular}{p{5.7cm}} \tiny{Se présenter sur Internet} \end{tabular} & 
 2h & 8h & 12h &  &  & 16\\ 
-\hline SAÉ15& | & 
+\hline \textcolor{saeC}{SAÉ15} & | & 
 \begin{tabular}{p{5.7cm}} \tiny{Traiter des données} \end{tabular} & 
 2h & 8h & 20h &  &  & 26\\ 
-\hline SAÉ16& | & 
+\hline \textcolor{saeC}{SAÉ16} & | & 
 \begin{tabular}{p{5.7cm}} \tiny{Portfolio} \end{tabular} & 
   & 3h &   & 0 & 0 & 0\\ 
-\hline \hline \multicolumn{6}{|l}{\bfseries Ressources}
+\hline \hline \multicolumn{6}{|l}{\textcolor{ressourceC}{\bfseries Ressources}}
 \\ 
-\hline R101& | & 
-\begin{tabular}{p{5.7cm}} \tiny{Initiation aux réseaux informatiques} \end{tabular} & 
+\hline \textcolor{ressourceC}{R101} & | & 
+\begin{tabular}{p{5.7cm}}\tiny{Initiation aux réseaux informatiques} \end{tabular} & 
 22h & 24h &  & 12 & 4 & 4\\ 
-\hline R102& | & 
-\begin{tabular}{p{5.7cm}} \tiny{Principes et architecture des réseaux} \end{tabular} & 
+\hline \textcolor{ressourceC}{R102} & | & 
+\begin{tabular}{p{5.7cm}}\tiny{Principes et architecture des réseaux} \end{tabular} & 
 12h & 15h &  & 12 &  & \\ 
-\hline R103& | & 
-\begin{tabular}{p{5.7cm}} \tiny{Réseaux locaux et équipements actifs} \end{tabular} & 
+\hline \textcolor{ressourceC}{R103} & | & 
+\begin{tabular}{p{5.7cm}}\tiny{Réseaux locaux et équipements actifs} \end{tabular} & 
 11h & 16h &  & 8 & 4 & 0\\ 
-\hline R104& | & 
-\begin{tabular}{p{5.7cm}} \tiny{Fondamentaux des systèmes électroniques} \end{tabular} & 
+\hline \textcolor{ressourceC}{R104} & | & 
+\begin{tabular}{p{5.7cm}}\tiny{Fondamentaux des systèmes électroniques} \end{tabular} & 
 15h & 18h &  & 9 & 5 & \\ 
-\hline R105& | & 
-\begin{tabular}{p{5.7cm}} \tiny{Supports de transmission pour les réseaux locaux} \end{tabular} & 
+\hline \textcolor{ressourceC}{R105} & | & 
+\begin{tabular}{p{5.7cm}}\tiny{Supports de transmission pour les réseaux locaux} \end{tabular} & 
 6h & 6h &  &  & 5 & \\ 
-\hline R106& | & 
-\begin{tabular}{p{5.7cm}} \tiny{Architecture des systèmes numériques et informatiques} \end{tabular} & 
+\hline \textcolor{ressourceC}{R106} & | & 
+\begin{tabular}{p{5.7cm}}\tiny{Architecture des systèmes numériques et informatiques} \end{tabular} & 
 12h & 12h &  & 10 &  & \\ 
-\hline R107& | & 
-\begin{tabular}{p{5.7cm}} \tiny{Fondamentaux de la programmation} \end{tabular} & 
+\hline \textcolor{ressourceC}{R107} & | & 
+\begin{tabular}{p{5.7cm}}\tiny{Fondamentaux de la programmation} \end{tabular} & 
 11h & 30h &  &  &  & 22\\ 
-\hline R108& | & 
-\begin{tabular}{p{5.7cm}} \tiny{Bases des systèmes d'exploitation} \end{tabular} & 
+\hline \textcolor{ressourceC}{R108} & | & 
+\begin{tabular}{p{5.7cm}}\tiny{Bases des systèmes d'exploitation} \end{tabular} & 
 6h & 21h &  & 6 &  & 7\\ 
-\hline R109& | & 
-\begin{tabular}{p{5.7cm}} \tiny{Introduction aux technologies Web} \end{tabular} & 
+\hline \textcolor{ressourceC}{R109} & | & 
+\begin{tabular}{p{5.7cm}}\tiny{Introduction aux technologies Web} \end{tabular} & 
 4h & 5h &  &  &  & 4\\ 
-\hline R110& | & 
-\begin{tabular}{p{5.7cm}} \tiny{Anglais de communication et initiation au vocabulaire technique} \end{tabular} & 
+\hline \textcolor{ressourceC}{R110} & | & 
+\begin{tabular}{p{5.7cm}}\tiny{Anglais de communication et initiation au vocabulaire technique} \end{tabular} & 
 10h & 20h &  & 3 & 5 & 5\\ 
-\hline R111& | & 
-\begin{tabular}{p{5.7cm}} \tiny{Expression-Culture-Communication Professionnelles 1} \end{tabular} & 
+\hline \textcolor{ressourceC}{R111} & | & 
+\begin{tabular}{p{5.7cm}}\tiny{Expression-Culture-Communication Professionnelles 1} \end{tabular} & 
 9h & 21h &  & 4 & 4 & 4\\ 
-\hline R112& | & 
-\begin{tabular}{p{5.7cm}} \tiny{Projet Personnel et Professionnel} \end{tabular} & 
+\hline \textcolor{ressourceC}{R112} & | & 
+\begin{tabular}{p{5.7cm}}\tiny{Projet Personnel et Professionnel} \end{tabular} & 
 3h & 12h &  & 3 & 3 & 3\\ 
-\hline R113& | & 
-\begin{tabular}{p{5.7cm}} \tiny{Mathématiques du signal} \end{tabular} & 
+\hline \textcolor{ressourceC}{R113} & | & 
+\begin{tabular}{p{5.7cm}}\tiny{Mathématiques du signal} \end{tabular} & 
 24h & 6h &  & 5 & 8 & \\ 
-\hline R114& | & 
-\begin{tabular}{p{5.7cm}} \tiny{Mathématiques des transmissions} \end{tabular} & 
+\hline \textcolor{ressourceC}{R114} & | & 
+\begin{tabular}{p{5.7cm}}\tiny{Mathématiques des transmissions} \end{tabular} & 
 24h & 6h &  & 4 & 8 & \\ 
-\hline R115& | & 
-\begin{tabular}{p{5.7cm}} \tiny{Gestion de projet} \end{tabular} & 
+\hline \textcolor{ressourceC}{R115} & | & 
+\begin{tabular}{p{5.7cm}}\tiny{Gestion de projet} \end{tabular} & 
 8h & 4h &  &  & 2 & 4\\ 
 \hline \hline \multicolumn{6}{|l}{\bfseries Total}
 \\ 
-\hline  & &  & 188h & 252h & 80h & 124 & 81 & 95\\ \hline\end{tabular}
+\hline  & &  & {\bfseries 188h} & {\bfseries 252h} & {\bfseries 80h} & {\bfseries 124} & {\bfseries 81} & {\bfseries 95}\\ \hline\end{tabular}
