--- a/latex/modeles/tableau_ressource.tex
+++ b/latex/modeles/tableau_ressource.tex
@@ -45,11 +45,11 @@
 \hline
 \multicolumn{3}{|c|}{\textcolor{ressourceC}{\bfseries Compétence(s) ciblées, coefficient(s) et apprentissage(s) critique(s) couvert(s)}} \\
 \hline
-	\textcolor{ressourceC}{\textit{\csname Rcomp\CODE A\endcsname} | {\csname Rniveau\CODE A\endcsname}}
+	\hyperlink{comp:RT1}{\textcolor{compCA}{\textit{\csname Rcomp\CODE A\endcsname}}} | {\csname Rniveau\CODE A\endcsname}
 	&
-	\textcolor{ressourceC}{\textit{\csname Rcomp\CODE B\endcsname} | {\csname Rniveau\CODE B\endcsname}}
+	\hyperlink{comp:RT2}{\textcolor{compCB}{\textit{\csname Rcomp\CODE B\endcsname}}} | {\csname Rniveau\CODE B\endcsname}
 	&
-	\textcolor{ressourceC}{\textit{\csname Rcomp\CODE C\endcsname} | {\csname Rniveau\CODE C\endcsname}}
+	\hyperlink{comp:RT3}{\textcolor{compCC}{\textit{\csname Rcomp\CODE C\endcsname}}} | {\csname Rniveau\CODE C\endcsname}
 \\
 \hline
 	\ifcsdef{Rcoeff\CODE A}{coeff. {\csname Rcoeff\CODE A\endcsname}}{} &
