--- a/latex/synthese/S1_acs_vs_saes_ressources.tex
+++ b/latex/synthese/S1_acs_vs_saes_ressources.tex
@@ -1,8 +1,7 @@
-\arrayrulecolor{black}
 \begin{tabular}[c]{|lp{3.5cm}||c|c|c|c|c|c||c|c|c|c|c|c|c|c|c|c|c|c|c|c|c|}
 \hline 
- & & \multicolumn{6}{c||}{\bfseries SAÉs}
- & \multicolumn{15}{c|}{\bfseries Ressources}\\ 
+ & & \multicolumn{6}{c||}{\textcolor{saeC}{\bfseries SAÉs}}
+ & \multicolumn{15}{c|}{\textcolor{ressourceC}{\bfseries Ressources}}\\ 
 \cline{3-23} & & \rotatebox[origin=l]{90}{\tiny{Se sensibiliser à l'hygiène informatique et à la cybersécurité~}}
  & \rotatebox[origin=l]{90}{\tiny{S'initier aux réseaux informatiques~}}
  & \rotatebox[origin=l]{90}{\tiny{Découvrir un dispositif de transmission~}}
@@ -28,120 +27,120 @@
 
 \\ 
  & & 
-\rotatebox[origin=r]{90}{~SAÉ11~|}
- & \rotatebox[origin=r]{90}{~SAÉ12~|}
- & \rotatebox[origin=r]{90}{~SAÉ13~|}
- & \rotatebox[origin=r]{90}{~SAÉ14~|}
- & \rotatebox[origin=r]{90}{~SAÉ15~|}
- & \rotatebox[origin=r]{90}{~SAÉ16~|}
+\rotatebox[origin=r]{90}{~\textcolor{saeC}{SAÉ11}~|}
+ & \rotatebox[origin=r]{90}{~\textcolor{saeC}{SAÉ12}~|}
+ & \rotatebox[origin=r]{90}{~\textcolor{saeC}{SAÉ13}~|}
+ & \rotatebox[origin=r]{90}{~\textcolor{saeC}{SAÉ14}~|}
+ & \rotatebox[origin=r]{90}{~\textcolor{saeC}{SAÉ15}~|}
+ & \rotatebox[origin=r]{90}{~\textcolor{saeC}{SAÉ16}~|}
 
- & \rotatebox[origin=r]{90}{~R101~|}
- & \rotatebox[origin=r]{90}{~R102~|}
- & \rotatebox[origin=r]{90}{~R103~|}
- & \rotatebox[origin=r]{90}{~R104~|}
- & \rotatebox[origin=r]{90}{~R105~|}
- & \rotatebox[origin=r]{90}{~R106~|}
- & \rotatebox[origin=r]{90}{~R107~|}
- & \rotatebox[origin=r]{90}{~R108~|}
- & \rotatebox[origin=r]{90}{~R109~|}
- & \rotatebox[origin=r]{90}{~R110~|}
- & \rotatebox[origin=r]{90}{~R111~|}
- & \rotatebox[origin=r]{90}{~R112~|}
- & \rotatebox[origin=r]{90}{~R113~|}
- & \rotatebox[origin=r]{90}{~R114~|}
- & \rotatebox[origin=r]{90}{~R115~|}
+ & \rotatebox[origin=r]{90}{~\textcolor{ressourceC}{R101}~|}
+ & \rotatebox[origin=r]{90}{~\textcolor{ressourceC}{R102}~|}
+ & \rotatebox[origin=r]{90}{~\textcolor{ressourceC}{R103}~|}
+ & \rotatebox[origin=r]{90}{~\textcolor{ressourceC}{R104}~|}
+ & \rotatebox[origin=r]{90}{~\textcolor{ressourceC}{R105}~|}
+ & \rotatebox[origin=r]{90}{~\textcolor{ressourceC}{R106}~|}
+ & \rotatebox[origin=r]{90}{~\textcolor{ressourceC}{R107}~|}
+ & \rotatebox[origin=r]{90}{~\textcolor{ressourceC}{R108}~|}
+ & \rotatebox[origin=r]{90}{~\textcolor{ressourceC}{R109}~|}
+ & \rotatebox[origin=r]{90}{~\textcolor{ressourceC}{R110}~|}
+ & \rotatebox[origin=r]{90}{~\textcolor{ressourceC}{R111}~|}
+ & \rotatebox[origin=r]{90}{~\textcolor{ressourceC}{R112}~|}
+ & \rotatebox[origin=r]{90}{~\textcolor{ressourceC}{R113}~|}
+ & \rotatebox[origin=r]{90}{~\textcolor{ressourceC}{R114}~|}
+ & \rotatebox[origin=r]{90}{~\textcolor{ressourceC}{R115}~|}
 
 \\ 
 \hline 
-\multicolumn{23}{|l|}{\bfseries RT1 - Administrer les réseaux et l'Internet } \\\multicolumn{23}{|l|}{\small Niveau 1 - Assister l'administrateur du réseau} \\\hline 
-AC0111 | & 
-\begin{tabular}{p{3.2cm}} \tiny{Maîtriser les lois fondamentales de l'électricité afin d'intervenir sur des équipements de réseaux et télécommunications} \end{tabular} & 
+\multicolumn{23}{|l|}{\hyperlink{comp:RT1}{\textcolor{compCA}{\bfseries RT1 - Administrer les réseaux et l'Internet }}} \\\multicolumn{23}{|l|}{\small Niveau 1 - Assister l'administrateur du réseau} \\\hline 
+\textcolor{compCA}{AC0111} | & 
+\begin{tabular}{p{3.2cm}} \tiny{Maîtriser les lois fondamentales de l'électricité afin d'intervenir sur des équipements de réseaux et télécommunications}\end{tabular} & 
  & $\times$ &  &  &  & 
  &  &  &  & $\times$ &  &  &  &  &  &  &  &  & $\times$ & $\times$ & \\ 
 \hline 
-AC0112 | & 
-\begin{tabular}{p{3.2cm}} \tiny{Comprendre l'architecture des systèmes numériques et les principes du codage de l'information} \end{tabular} & 
+\textcolor{compCA}{AC0112} | & 
+\begin{tabular}{p{3.2cm}} \tiny{Comprendre l'architecture des systèmes numériques et les principes du codage de l'information}\end{tabular} & 
 $\times$ & $\times$ &  &  &  & 
  &  &  &  &  &  & $\times$ &  &  &  &  &  & $\times$ &  &  & \\ 
 \hline 
-AC0113 | & 
-\begin{tabular}{p{3.2cm}} \tiny{Configurer les fonctions de base du réseau local} \end{tabular} & 
+\textcolor{compCA}{AC0113} | & 
+\begin{tabular}{p{3.2cm}} \tiny{Configurer les fonctions de base du réseau local}\end{tabular} & 
  & $\times$ &  &  &  & 
  & $\times$ &  & $\times$ &  &  &  &  &  &  &  &  &  &  &  & \\ 
 \hline 
-AC0114 | & 
-\begin{tabular}{p{3.2cm}} \tiny{Maîtriser les rôles et les principes fondamentaux des systèmes d'exploitation afin d'interagir avec ceux-ci pour la configuration et administration des réseaux et services fournis} \end{tabular} & 
+\textcolor{compCA}{AC0114} | & 
+\begin{tabular}{p{3.2cm}} \tiny{Maîtriser les rôles et les principes fondamentaux des systèmes d'exploitation afin d'interagir avec ceux-ci pour la configuration et administration des réseaux et services fournis}\end{tabular} & 
 $\times$ & $\times$ &  &  &  & 
  &  & $\times$ &  &  &  &  &  & $\times$ &  &  &  &  &  &  & \\ 
 \hline 
-AC0115 | & 
-\begin{tabular}{p{3.2cm}} \tiny{Identifier les dysfonctionnements du réseau local} \end{tabular} & 
+\textcolor{compCA}{AC0115} | & 
+\begin{tabular}{p{3.2cm}} \tiny{Identifier les dysfonctionnements du réseau local}\end{tabular} & 
 $\times$ & $\times$ &  &  &  & 
  & $\times$ & $\times$ & $\times$ &  &  &  &  &  &  & $\times$ &  &  &  &  & \\ 
 \hline 
-AC0116 | & 
-\begin{tabular}{p{3.2cm}} \tiny{Installer un poste client} \end{tabular} & 
+\textcolor{compCA}{AC0116} | & 
+\begin{tabular}{p{3.2cm}} \tiny{Installer un poste client}\end{tabular} & 
  & $\times$ &  &  &  & 
  & $\times$ &  & $\times$ &  &  &  &  & $\times$ &  &  & $\times$ &  &  &  & \\ 
 \hline 
 \hline 
-\multicolumn{23}{|l|}{\bfseries RT2 - Connecter les entreprises et les usagers } \\\multicolumn{23}{|l|}{\small Niveau 1 - Découvrir les transmissions et la ToIP} \\\hline 
-AC0211 | & 
-\begin{tabular}{p{3.2cm}} \tiny{Mesurer et analyser les signaux} \end{tabular} & 
- & $\times$ &  &  &  & 
- &  &  &  & $\times$ &  &  &  &  &  &  &  &  & $\times$ & $\times$ & \\ 
+\multicolumn{23}{|l|}{\hyperlink{comp:RT2}{\textcolor{compCB}{\bfseries RT2 - Connecter les entreprises et les usagers }}} \\\multicolumn{23}{|l|}{\small Niveau 1 - Découvrir les transmissions et la ToIP} \\\hline 
+\textcolor{compCB}{AC0211} | & 
+\begin{tabular}{p{3.2cm}} \tiny{Mesurer et analyser les signaux}\end{tabular} & 
+ &  & $\times$ &  &  & 
+ &  &  &  & $\times$ & $\times$ &  &  &  &  &  &  &  & $\times$ & $\times$ & \\ 
 \hline 
-AC0212 | & 
-\begin{tabular}{p{3.2cm}} \tiny{Caractériser des systèmes de transmissions élémentaires et découvrir la modélisation mathématique de leur fonctionnement} \end{tabular} & 
-$\times$ & $\times$ &  &  &  & 
- &  &  &  &  &  & $\times$ &  &  &  &  &  & $\times$ &  &  & \\ 
+\textcolor{compCB}{AC0212} | & 
+\begin{tabular}{p{3.2cm}} \tiny{Caractériser des systèmes de transmissions élémentaires et découvrir la modélisation mathématique de leur fonctionnement}\end{tabular} & 
+ &  &  &  &  & 
+ &  &  &  &  &  &  &  &  &  &  &  & $\times$ & $\times$ & $\times$ & \\ 
 \hline 
-AC0213 | & 
-\begin{tabular}{p{3.2cm}} \tiny{Déployer des supports de transmission} \end{tabular} & 
- & $\times$ &  &  &  & 
- & $\times$ &  & $\times$ &  &  &  &  &  &  &  &  &  &  &  & \\ 
+\textcolor{compCB}{AC0213} | & 
+\begin{tabular}{p{3.2cm}} \tiny{Déployer des supports de transmission}\end{tabular} & 
+ &  & $\times$ &  &  & 
+ & $\times$ &  & $\times$ &  & $\times$ &  &  &  &  &  &  &  &  &  & \\ 
 \hline 
-AC0214 | & 
-\begin{tabular}{p{3.2cm}} \tiny{Connecter les systèmes de ToIP} \end{tabular} & 
-$\times$ & $\times$ &  &  &  & 
- &  & $\times$ &  &  &  &  &  & $\times$ &  &  &  &  &  &  & \\ 
+\textcolor{compCB}{AC0214} | & 
+\begin{tabular}{p{3.2cm}} \tiny{Connecter les systèmes de ToIP}\end{tabular} & 
+ &  &  &  &  & 
+ &  &  &  &  &  &  &  &  &  &  &  &  &  &  & \\ 
 \hline 
-AC0215 | & 
-\begin{tabular}{p{3.2cm}} \tiny{Communiquer avec un client ou un collaborateur} \end{tabular} & 
-$\times$ & $\times$ &  &  &  & 
- & $\times$ & $\times$ & $\times$ &  &  &  &  &  &  & $\times$ &  &  &  &  & \\ 
+\textcolor{compCB}{AC0215} | & 
+\begin{tabular}{p{3.2cm}} \tiny{Communiquer avec un client ou un collaborateur}\end{tabular} & 
+ &  & $\times$ &  &  & 
+ &  &  &  &  &  &  &  &  &  & $\times$ & $\times$ &  &  &  & $\times$\\ 
 \hline 
 \hline 
-\multicolumn{23}{|l|}{\bfseries RT3 - Créer des outils et applications informatiques pour les R\&T } \\\multicolumn{23}{|l|}{\small Niveau 1 - S'intégrer dans un service informatique} \\\hline 
-AC0311 | & 
-\begin{tabular}{p{3.2cm}} \tiny{Utiliser un système informatique et ses outils} \end{tabular} & 
- & $\times$ &  &  &  & 
- &  &  &  & $\times$ &  &  &  &  &  &  &  &  & $\times$ & $\times$ & \\ 
+\multicolumn{23}{|l|}{\hyperlink{comp:RT3}{\textcolor{compCC}{\bfseries RT3 - Créer des outils et applications informatiques pour les R\&T }}} \\\multicolumn{23}{|l|}{\small Niveau 1 - S'intégrer dans un service informatique} \\\hline 
+\textcolor{compCC}{AC0311} | & 
+\begin{tabular}{p{3.2cm}} \tiny{Utiliser un système informatique et ses outils}\end{tabular} & 
+ &  &  & $\times$ & $\times$ & 
+ & $\times$ &  & $\times$ &  &  & $\times$ & $\times$ & $\times$ &  &  &  & $\times$ &  &  & \\ 
 \hline 
-AC0312 | & 
-\begin{tabular}{p{3.2cm}} \tiny{Lire, exécuter, corriger et modifier un programme} \end{tabular} & 
-$\times$ & $\times$ &  &  &  & 
- &  &  &  &  &  & $\times$ &  &  &  &  &  & $\times$ &  &  & \\ 
+\textcolor{compCC}{AC0312} | & 
+\begin{tabular}{p{3.2cm}} \tiny{Lire, exécuter, corriger et modifier un programme}\end{tabular} & 
+ &  &  &  & $\times$ & 
+ &  &  &  &  &  &  & $\times$ & $\times$ &  &  &  &  &  &  & \\ 
 \hline 
-AC0313 | & 
-\begin{tabular}{p{3.2cm}} \tiny{Traduire un algorithme, dans un langage et pour un environnement donné} \end{tabular} & 
- & $\times$ &  &  &  & 
- & $\times$ &  & $\times$ &  &  &  &  &  &  &  &  &  &  &  & \\ 
+\textcolor{compCC}{AC0313} | & 
+\begin{tabular}{p{3.2cm}} \tiny{Traduire un algorithme, dans un langage et pour un environnement donné}\end{tabular} & 
+ &  &  &  & $\times$ & 
+ &  &  &  &  &  &  & $\times$ &  &  &  &  &  &  &  & \\ 
 \hline 
-AC0314 | & 
-\begin{tabular}{p{3.2cm}} \tiny{Connaître l'architecture et les technologies d'un site Web} \end{tabular} & 
-$\times$ & $\times$ &  &  &  & 
- &  & $\times$ &  &  &  &  &  & $\times$ &  &  &  &  &  &  & \\ 
+\textcolor{compCC}{AC0314} | & 
+\begin{tabular}{p{3.2cm}} \tiny{Connaître l'architecture et les technologies d'un site Web}\end{tabular} & 
+ &  &  & $\times$ & $\times$ & 
+ &  &  &  &  &  &  &  &  & $\times$ &  &  &  &  &  & \\ 
 \hline 
-AC0315 | & 
-\begin{tabular}{p{3.2cm}} \tiny{Choisir les mécanismes de gestion de données adaptés au développement de l'outil} \end{tabular} & 
-$\times$ & $\times$ &  &  &  & 
- & $\times$ & $\times$ & $\times$ &  &  &  &  &  &  & $\times$ &  &  &  &  & \\ 
+\textcolor{compCC}{AC0315} | & 
+\begin{tabular}{p{3.2cm}} \tiny{Choisir les mécanismes de gestion de données adaptés au développement de l'outil}\end{tabular} & 
+ &  &  &  & $\times$ & 
+ &  &  &  &  &  &  &  &  &  &  &  &  &  &  & \\ 
 \hline 
-AC0316 | & 
-\begin{tabular}{p{3.2cm}} \tiny{S'intégrer dans un environnement propice au développement et au travail collaboratif} \end{tabular} & 
- & $\times$ &  &  &  & 
- & $\times$ &  & $\times$ &  &  &  &  & $\times$ &  &  & $\times$ &  &  &  & \\ 
+\textcolor{compCC}{AC0316} | & 
+\begin{tabular}{p{3.2cm}} \tiny{S'intégrer dans un environnement propice au développement et au travail collaboratif}\end{tabular} & 
+ &  &  &  & $\times$ & 
+ &  &  &  &  &  &  & $\times$ &  &  & $\times$ & $\times$ &  &  &  & $\times$\\ 
 \hline 
 \hline 
 \end{tabular}
