--- a/latex/synthese/S2_acs_vs_saes_ressources.tex
+++ b/latex/synthese/S2_acs_vs_saes_ressources.tex
@@ -1,8 +1,7 @@
-\arrayrulecolor{black}
 \begin{tabular}[c]{|lp{3.5cm}||c|c|c|c||c|c|c|c|c|c|c|c|c|c|c|c|c|c|}
 \hline 
- & & \multicolumn{4}{c||}{\bfseries SAÉs}
- & \multicolumn{14}{c|}{\bfseries Ressources}\\ 
+ & & \multicolumn{4}{c||}{\textcolor{saeC}{\bfseries SAÉs}}
+ & \multicolumn{14}{c|}{\textcolor{ressourceC}{\bfseries Ressources}}\\ 
 \cline{3-20} & & \rotatebox[origin=l]{90}{\tiny{Construire un réseau informatique pour une petite structure~}}
  & \rotatebox[origin=l]{90}{\tiny{Mesurer et caractériser un signal ou un système~}}
  & \rotatebox[origin=l]{90}{\tiny{Mettre en place une solution informatique pour l’entreprise~}}
@@ -25,117 +24,117 @@
 
 \\ 
  & & 
-\rotatebox[origin=r]{90}{~SAÉ21~|}
- & \rotatebox[origin=r]{90}{~SAÉ22~|}
- & \rotatebox[origin=r]{90}{~SAÉ23~|}
- & \rotatebox[origin=r]{90}{~SAÉ24~|}
+\rotatebox[origin=r]{90}{~\textcolor{saeC}{SAÉ21}~|}
+ & \rotatebox[origin=r]{90}{~\textcolor{saeC}{SAÉ22}~|}
+ & \rotatebox[origin=r]{90}{~\textcolor{saeC}{SAÉ23}~|}
+ & \rotatebox[origin=r]{90}{~\textcolor{saeC}{SAÉ24}~|}
 
- & \rotatebox[origin=r]{90}{~R201~|}
- & \rotatebox[origin=r]{90}{~R202~|}
- & \rotatebox[origin=r]{90}{~R203~|}
- & \rotatebox[origin=r]{90}{~R204~|}
- & \rotatebox[origin=r]{90}{~R205~|}
- & \rotatebox[origin=r]{90}{~R206~|}
- & \rotatebox[origin=r]{90}{~R207~|}
- & \rotatebox[origin=r]{90}{~R208~|}
- & \rotatebox[origin=r]{90}{~R209~|}
- & \rotatebox[origin=r]{90}{~R210~|}
- & \rotatebox[origin=r]{90}{~R211~|}
- & \rotatebox[origin=r]{90}{~R212~|}
- & \rotatebox[origin=r]{90}{~R213~|}
- & \rotatebox[origin=r]{90}{~R214~|}
+ & \rotatebox[origin=r]{90}{~\textcolor{ressourceC}{R201}~|}
+ & \rotatebox[origin=r]{90}{~\textcolor{ressourceC}{R202}~|}
+ & \rotatebox[origin=r]{90}{~\textcolor{ressourceC}{R203}~|}
+ & \rotatebox[origin=r]{90}{~\textcolor{ressourceC}{R204}~|}
+ & \rotatebox[origin=r]{90}{~\textcolor{ressourceC}{R205}~|}
+ & \rotatebox[origin=r]{90}{~\textcolor{ressourceC}{R206}~|}
+ & \rotatebox[origin=r]{90}{~\textcolor{ressourceC}{R207}~|}
+ & \rotatebox[origin=r]{90}{~\textcolor{ressourceC}{R208}~|}
+ & \rotatebox[origin=r]{90}{~\textcolor{ressourceC}{R209}~|}
+ & \rotatebox[origin=r]{90}{~\textcolor{ressourceC}{R210}~|}
+ & \rotatebox[origin=r]{90}{~\textcolor{ressourceC}{R211}~|}
+ & \rotatebox[origin=r]{90}{~\textcolor{ressourceC}{R212}~|}
+ & \rotatebox[origin=r]{90}{~\textcolor{ressourceC}{R213}~|}
+ & \rotatebox[origin=r]{90}{~\textcolor{ressourceC}{R214}~|}
 
 \\ 
 \hline 
-\multicolumn{20}{|l|}{\bfseries RT1 - Administrer les réseaux et l'Internet } \\\multicolumn{20}{|l|}{\small Niveau 1 - Assister l'administrateur du réseau} \\\hline 
-AC0111 | & 
-\begin{tabular}{p{3.2cm}} \tiny{Maîtriser les lois fondamentales de l'électricité afin d'intervenir sur des équipements de réseaux et télécommunications} \end{tabular} & 
+\multicolumn{20}{|l|}{\hyperlink{comp:RT1}{\textcolor{compCA}{\bfseries RT1 - Administrer les réseaux et l'Internet }}} \\\multicolumn{20}{|l|}{\small Niveau 1 - Assister l'administrateur du réseau} \\\hline 
+\textcolor{compCA}{AC0111} | & 
+\begin{tabular}{p{3.2cm}} \tiny{Maîtriser les lois fondamentales de l'électricité afin d'intervenir sur des équipements de réseaux et télécommunications}\end{tabular} & 
  &  &  & $\times$
  &  &  &  &  & $\times$ &  &  &  &  &  &  &  &  & $\times$\\ 
 \hline 
-AC0112 | & 
-\begin{tabular}{p{3.2cm}} \tiny{Comprendre l'architecture des systèmes numériques et les principes du codage de l'information} \end{tabular} & 
+\textcolor{compCA}{AC0112} | & 
+\begin{tabular}{p{3.2cm}} \tiny{Comprendre l'architecture des systèmes numériques et les principes du codage de l'information}\end{tabular} & 
 $\times$ &  &  & $\times$
  &  &  &  &  &  & $\times$ & $\times$ &  & $\times$ & $\times$ &  &  & $\times$ & \\ 
 \hline 
-AC0113 | & 
-\begin{tabular}{p{3.2cm}} \tiny{Configurer les fonctions de base du réseau local} \end{tabular} & 
+\textcolor{compCA}{AC0113} | & 
+\begin{tabular}{p{3.2cm}} \tiny{Configurer les fonctions de base du réseau local}\end{tabular} & 
 $\times$ &  &  & $\times$
  & $\times$ & $\times$ & $\times$ & $\times$ &  &  &  &  &  &  &  &  &  & \\ 
 \hline 
-AC0114 | & 
-\begin{tabular}{p{3.2cm}} \tiny{Maîtriser les rôles et les principes fondamentaux des systèmes d'exploitation afin d'interagir avec ceux-ci pour la configuration et administration des réseaux et services fournis} \end{tabular} & 
+\textcolor{compCA}{AC0114} | & 
+\begin{tabular}{p{3.2cm}} \tiny{Maîtriser les rôles et les principes fondamentaux des systèmes d'exploitation afin d'interagir avec ceux-ci pour la configuration et administration des réseaux et services fournis}\end{tabular} & 
 $\times$ &  &  & $\times$
  &  & $\times$ & $\times$ &  &  &  &  &  & $\times$ & $\times$ &  &  &  & \\ 
 \hline 
-AC0115 | & 
-\begin{tabular}{p{3.2cm}} \tiny{Identifier les dysfonctionnements du réseau local} \end{tabular} & 
+\textcolor{compCA}{AC0115} | & 
+\begin{tabular}{p{3.2cm}} \tiny{Identifier les dysfonctionnements du réseau local}\end{tabular} & 
 $\times$ &  &  & $\times$
  & $\times$ & $\times$ & $\times$ & $\times$ &  &  &  &  &  &  & $\times$ & $\times$ &  & \\ 
 \hline 
-AC0116 | & 
-\begin{tabular}{p{3.2cm}} \tiny{Installer un poste client} \end{tabular} & 
+\textcolor{compCA}{AC0116} | & 
+\begin{tabular}{p{3.2cm}} \tiny{Installer un poste client}\end{tabular} & 
 $\times$ &  &  & $\times$
  & $\times$ & $\times$ &  & $\times$ &  &  &  &  &  &  &  &  &  & \\ 
 \hline 
 \hline 
-\multicolumn{20}{|l|}{\bfseries RT2 - Connecter les entreprises et les usagers } \\\multicolumn{20}{|l|}{\small Niveau 1 - Découvrir les transmissions et la ToIP} \\\hline 
-AC0211 | & 
-\begin{tabular}{p{3.2cm}} \tiny{Mesurer et analyser les signaux} \end{tabular} & 
+\multicolumn{20}{|l|}{\hyperlink{comp:RT2}{\textcolor{compCB}{\bfseries RT2 - Connecter les entreprises et les usagers }}} \\\multicolumn{20}{|l|}{\small Niveau 1 - Découvrir les transmissions et la ToIP} \\\hline 
+\textcolor{compCB}{AC0211} | & 
+\begin{tabular}{p{3.2cm}} \tiny{Mesurer et analyser les signaux}\end{tabular} & 
+ & $\times$ &  & $\times$
+ &  &  &  &  & $\times$ & $\times$ &  &  &  &  &  &  &  & $\times$\\ 
+\hline 
+\textcolor{compCB}{AC0212} | & 
+\begin{tabular}{p{3.2cm}} \tiny{Caractériser des systèmes de transmissions élémentaires et découvrir la modélisation mathématique de leur fonctionnement}\end{tabular} & 
+ & $\times$ &  & $\times$
+ &  &  &  &  & $\times$ & $\times$ &  &  &  &  &  &  & $\times$ & $\times$\\ 
+\hline 
+\textcolor{compCB}{AC0213} | & 
+\begin{tabular}{p{3.2cm}} \tiny{Déployer des supports de transmission}\end{tabular} & 
+ & $\times$ &  & $\times$
+ & $\times$ &  &  & $\times$ &  &  &  &  &  &  &  &  &  & \\ 
+\hline 
+\textcolor{compCB}{AC0214} | & 
+\begin{tabular}{p{3.2cm}} \tiny{Connecter les systèmes de ToIP}\end{tabular} & 
  &  &  & $\times$
- &  &  &  &  & $\times$ &  &  &  &  &  &  &  &  & $\times$\\ 
+ &  &  &  &  &  &  &  &  &  &  &  &  &  & \\ 
 \hline 
-AC0212 | & 
-\begin{tabular}{p{3.2cm}} \tiny{Caractériser des systèmes de transmissions élémentaires et découvrir la modélisation mathématique de leur fonctionnement} \end{tabular} & 
-$\times$ &  &  & $\times$
- &  &  &  &  &  & $\times$ & $\times$ &  & $\times$ & $\times$ &  &  & $\times$ & \\ 
-\hline 
-AC0213 | & 
-\begin{tabular}{p{3.2cm}} \tiny{Déployer des supports de transmission} \end{tabular} & 
-$\times$ &  &  & $\times$
- & $\times$ & $\times$ & $\times$ & $\times$ &  &  &  &  &  &  &  &  &  & \\ 
-\hline 
-AC0214 | & 
-\begin{tabular}{p{3.2cm}} \tiny{Connecter les systèmes de ToIP} \end{tabular} & 
-$\times$ &  &  & $\times$
- &  & $\times$ & $\times$ &  &  &  &  &  & $\times$ & $\times$ &  &  &  & \\ 
-\hline 
-AC0215 | & 
-\begin{tabular}{p{3.2cm}} \tiny{Communiquer avec un client ou un collaborateur} \end{tabular} & 
-$\times$ &  &  & $\times$
- & $\times$ & $\times$ & $\times$ & $\times$ &  &  &  &  &  &  & $\times$ & $\times$ &  & \\ 
+\textcolor{compCB}{AC0215} | & 
+\begin{tabular}{p{3.2cm}} \tiny{Communiquer avec un client ou un collaborateur}\end{tabular} & 
+ & $\times$ &  & $\times$
+ &  &  &  &  &  &  &  &  &  & $\times$ & $\times$ & $\times$ &  & \\ 
 \hline 
 \hline 
-\multicolumn{20}{|l|}{\bfseries RT3 - Créer des outils et applications informatiques pour les R\&T } \\\multicolumn{20}{|l|}{\small Niveau 1 - S'intégrer dans un service informatique} \\\hline 
-AC0311 | & 
-\begin{tabular}{p{3.2cm}} \tiny{Utiliser un système informatique et ses outils} \end{tabular} & 
- &  &  & $\times$
- &  &  &  &  & $\times$ &  &  &  &  &  &  &  &  & $\times$\\ 
+\multicolumn{20}{|l|}{\hyperlink{comp:RT3}{\textcolor{compCC}{\bfseries RT3 - Créer des outils et applications informatiques pour les R\&T }}} \\\multicolumn{20}{|l|}{\small Niveau 1 - S'intégrer dans un service informatique} \\\hline 
+\textcolor{compCC}{AC0311} | & 
+\begin{tabular}{p{3.2cm}} \tiny{Utiliser un système informatique et ses outils}\end{tabular} & 
+ &  & $\times$ & $\times$
+ & $\times$ & $\times$ &  & $\times$ &  &  & $\times$ & $\times$ & $\times$ &  &  &  & $\times$ & \\ 
 \hline 
-AC0312 | & 
-\begin{tabular}{p{3.2cm}} \tiny{Lire, exécuter, corriger et modifier un programme} \end{tabular} & 
-$\times$ &  &  & $\times$
- &  &  &  &  &  & $\times$ & $\times$ &  & $\times$ & $\times$ &  &  & $\times$ & \\ 
+\textcolor{compCC}{AC0312} | & 
+\begin{tabular}{p{3.2cm}} \tiny{Lire, exécuter, corriger et modifier un programme}\end{tabular} & 
+ &  & $\times$ & $\times$
+ &  &  &  &  &  &  & $\times$ & $\times$ & $\times$ &  &  &  &  & \\ 
 \hline 
-AC0313 | & 
-\begin{tabular}{p{3.2cm}} \tiny{Traduire un algorithme, dans un langage et pour un environnement donné} \end{tabular} & 
-$\times$ &  &  & $\times$
- & $\times$ & $\times$ & $\times$ & $\times$ &  &  &  &  &  &  &  &  &  & \\ 
+\textcolor{compCC}{AC0313} | & 
+\begin{tabular}{p{3.2cm}} \tiny{Traduire un algorithme, dans un langage et pour un environnement donné}\end{tabular} & 
+ &  & $\times$ & $\times$
+ &  &  &  &  &  &  & $\times$ & $\times$ & $\times$ &  &  &  & $\times$ & \\ 
 \hline 
-AC0314 | & 
-\begin{tabular}{p{3.2cm}} \tiny{Connaître l'architecture et les technologies d'un site Web} \end{tabular} & 
-$\times$ &  &  & $\times$
- &  & $\times$ & $\times$ &  &  &  &  &  & $\times$ & $\times$ &  &  &  & \\ 
+\textcolor{compCC}{AC0314} | & 
+\begin{tabular}{p{3.2cm}} \tiny{Connaître l'architecture et les technologies d'un site Web}\end{tabular} & 
+ &  & $\times$ & $\times$
+ &  &  &  &  &  &  & $\times$ &  & $\times$ &  &  &  &  & \\ 
 \hline 
-AC0315 | & 
-\begin{tabular}{p{3.2cm}} \tiny{Choisir les mécanismes de gestion de données adaptés au développement de l'outil} \end{tabular} & 
-$\times$ &  &  & $\times$
- & $\times$ & $\times$ & $\times$ & $\times$ &  &  &  &  &  &  & $\times$ & $\times$ &  & \\ 
+\textcolor{compCC}{AC0315} | & 
+\begin{tabular}{p{3.2cm}} \tiny{Choisir les mécanismes de gestion de données adaptés au développement de l'outil}\end{tabular} & 
+ &  & $\times$ & $\times$
+ &  &  &  &  &  &  & $\times$ & $\times$ & $\times$ &  &  &  &  & \\ 
 \hline 
-AC0316 | & 
-\begin{tabular}{p{3.2cm}} \tiny{S'intégrer dans un environnement propice au développement et au travail collaboratif} \end{tabular} & 
-$\times$ &  &  & $\times$
- & $\times$ & $\times$ &  & $\times$ &  &  &  &  &  &  &  &  &  & \\ 
+\textcolor{compCC}{AC0316} | & 
+\begin{tabular}{p{3.2cm}} \tiny{S'intégrer dans un environnement propice au développement et au travail collaboratif}\end{tabular} & 
+ &  & $\times$ & $\times$
+ &  &  &  &  &  &  & $\times$ & $\times$ & $\times$ & $\times$ & $\times$ & $\times$ &  & \\ 
 \hline 
 \hline 
 \end{tabular}
