Finalisation avec abbréviations

--- a/latex/pn_formation.tex
+++ b/latex/pn_formation.tex
@@ -112,6 +112,8 @@
 % \newpage
 %}
 
+
+
 \section{Compétences du tronc commun}
 
 \foreach \CNOM/\CTYPE/\CLETTRE [count=\COUXX] in {CCA/C/A, CCB/C/B, CCC/C/C} {
@@ -187,5 +189,9 @@
 % Les ressources du semestre 2
 \subsection{Fiches ressources}
 \affichageRessource{\sem}
+
+\section{Abbréviations}
+
+\input{synthese/abbreviations.tex}
 
 \end{document}
