--- a/latex/synthese/S1_coeffs_saes_ressources.tex
+++ b/latex/synthese/S1_coeffs_saes_ressources.tex
@@ -40,7 +40,7 @@
 \hline \textcolor{saeC}{SAÉ16} & | & 
 \begin{tabular}{p{5.7cm}} \tiny{Portfolio} \end{tabular} & 
   & 3h &   & 0 & 0 & 0\\ 
-\hline \hline \multicolumn{6}{|l}{\textcolor{ressourceC}{\bfseries Ressources}}
+\hline \multicolumn{6}{|l}{\textcolor{ressourceC}{\bfseries Ressources}}
 \\ 
 \hline \textcolor{ressourceC}{R101} & | & 
 \begin{tabular}{p{5.7cm}}\tiny{Initiation aux réseaux informatiques} \end{tabular} & 
@@ -89,4 +89,4 @@
 8h & 4h &  &  & 2 & 4\\ 
 \hline \hline \multicolumn{6}{|l}{\bfseries Total}
 \\ 
-\hline  & &  & {\bfseries 188h} & {\bfseries 252h} & {\bfseries 80h} & {\bfseries 124} & {\bfseries 81} & {\bfseries 95}\\ \hline\end{tabular}
+\hline \multicolumn{3}{|r|}{\textit{SAÉs}}  & \textit{11h} & \textit{36h} & \textit{80h} & \textit{48h} & \textit{33h} & \textit{42h}\\ \hline \multicolumn{3}{|r|}{\textit{Ressources}}  & \textit{177h} & \textit{216h} & \textit{0h} & \textit{76} & \textit{48} & \textit{53}\\ \hline \multicolumn{3}{|r|}{\bfseries SAÉs + Ressources} & {\bfseries 188h} & {\bfseries 252h} & {\bfseries 80h} & {\bfseries 124} & {\bfseries 81} & {\bfseries 95}\\ \hline\end{tabular}
