--- a/latex/synthese/S2_coeffs_saes_ressources.tex
+++ b/latex/synthese/S2_coeffs_saes_ressources.tex
@@ -34,7 +34,7 @@
 \hline \textcolor{saeC}{SAÉ24} & | & 
 \begin{tabular}{p{5.7cm}} \tiny{Projet intégratif} \end{tabular} & 
 8h &   & 54h & 23 & 19 & 18\\ 
-\hline \hline \multicolumn{6}{|l}{\textcolor{ressourceC}{\bfseries Ressources}}
+\hline \multicolumn{6}{|l}{\textcolor{ressourceC}{\bfseries Ressources}}
 \\ 
 \hline \textcolor{ressourceC}{R201} & | & 
 \begin{tabular}{p{5.7cm}}\tiny{Technologie de l'Internet} \end{tabular} & 
@@ -80,4 +80,4 @@
 24h & 6h &  & 3 & 9 & \\ 
 \hline \hline \multicolumn{6}{|l}{\bfseries Total}
 \\ 
-\hline  & &  & {\bfseries 211h} & {\bfseries 254h} & {\bfseries 90h} & {\bfseries 114} & {\bfseries 99} & {\bfseries 87}\\ \hline\end{tabular}
+\hline \multicolumn{3}{|r|}{\textit{SAÉs}}  & \textit{13h} & \textit{32h} & \textit{90h} & \textit{46h} & \textit{38h} & \textit{36h}\\ \hline \multicolumn{3}{|r|}{\textit{Ressources}}  & \textit{198h} & \textit{222h} & \textit{0h} & \textit{68} & \textit{61} & \textit{51}\\ \hline \multicolumn{3}{|r|}{\bfseries SAÉs + Ressources} & {\bfseries 211h} & {\bfseries 254h} & {\bfseries 90h} & {\bfseries 114} & {\bfseries 99} & {\bfseries 87}\\ \hline\end{tabular}
